[metadata]
# replace with your username:
name = bioportal-apis
version = 0.0.3
author = José Zavala González
author_email = jose.zavala@salud.pr.gov
description = BioPortal APIs es un paquete de Python que permite accesar las bases de datos públicas del BioPortal del Departamento de Salud de Puerto Rico.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmzg1229/bioportal-apis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.6
install_requires =
	brotlipy
	requests
	pandas >= 1.0.3